Adoção da biblioteca oficial AWS para upload dos arquivos e remoção de outputs

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "jade": "*",
     "express": "~3.1.0",
     "streaming-s3": "~0.3.2",
-    "zencoder": "~1.0.0"
+    "zencoder": "~1.0.0",
+    "aws-sdk": "~2.0.14"
   },
   "author": {
     "name": "Fagner Valente",
